Do not use EnumSet for material
It creates a JumboEnumSet, which uses a truly massive array.